# AbstractAlgebraTools

./: LICENCE  LICENSE  README.md  pyproject.toml  report.html  requirements.txt  setup.py
AbstractMathTools/: AlternatingGroup.py  CyclicGroup.py  CyclicPermutationGroup.py  DihedralGroup.py  GLGroup.py  KleinGroup.py  PermmutationGroup.py  SymetricGroup.py
AbstractMathTools/tests/: test_alternating_group.py  test_cyclic_group.py  test_cyclic_permutation_group.py  test_dihedral_group.py  test_gl_group.py  test_permmutation_group.py
abstract_math_tools/: alternating_group.py  cyclic_group.py  cyclic_permutation_group.py  dihedral_group.py  gl_group.py  klein_group.py  permutation.py  permutation_group.py  report.html  report.htmlclear  symetric_group.py  test.ps1  zn_mul_group.py  zn_plus_group.py
abstract_math_tools/tests/: test_alternating_group.py  test_basics.py  test_cyclic_group.py  test_cyclic_permutation_group.py  test_dihedral_group.py  test_gl_group.py  test_klein_group.py  test_permmutation_group.py  test_zn_mul_group.py  test_zn_plus_group.py
abstract_math_tools/utils/: nt_basics.py
notebooks/: groups.ipynb
src/group_theory/: alternating_group.py  cyclic_group.py  cyclic_permutation_group.py  permutation_group.py  symmetric_group.py  zn_group.py
src/tests/: report.html
src/utils/: nt_basics.py
tests/: report.html  test.sh
tests/group_theory/: test_ntheory.py  test_zn_group.py  xtest_alternating_group.py  xtest_cyclic_group.py  xtest_dihedral_group.py  xtest_gl_group.py  xtest_klein_group.py  xtest_permutation_group.py  (+1 more)
(+9 files in other folders)
