[tool.poetry]
name = "abstract_math_tools"
version = "0.1.0"
description = ""
authors = ["cmessoftware <cmessoftware@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
txt2txt = "^1.1.2"
numpy = "1.26.3"
pandas = "2.1.4"
fractional = "0.0.1"
networkx = "3.2.1"
pytest = "7.4.4"
pytest-html = "4.1.1"
sympy = "1.12"
more-itertools ="10.2.0"
jupyter = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
